# bazel-demo

./: LICENSE  MODULE.bazel
generator/: BUILD.bazel  MODULE.bazel  defs.bzl  generate.py
pkg-opts/: MODULE.bazel
pkg-opts/pkg1-use-features/: BUILD.bazel  gen1.gen  gen2.gen
pkg-opts/pkg2-use-default/: BUILD.bazel  gen3.gen
pkg-opts/pkg3-use-macro/: BUILD.bazel  gen.bzl
py_test_env/: BUILD.bazel  one.cc  one.h  test_dlopen.py
